--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;500;600&display=swap"
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luxury Watch E-commerce Site with Firebase</title>
+  <title>Aptify - Property Rental & Purchase Platform</title>
 </head>
 
 <body>
